--- a/views/visitor.ejs
+++ b/views/visitor.ejs
@@ -29,9 +29,8 @@
                                                 <th>手机</th>
                                                 <th>来访目的</th>
                                                 <th>来访日期</th>
-                                                <th>门牌号</th>
-                                                <th>被访人</th>
                                                 <th>被访公司</th>
+                                                <th>被访人</th>
                                                 <th>审核结果</th>
                                             </tr>
                                         </thead>
@@ -92,9 +91,8 @@
                     { "data": "phone" },
                     { "data": "content" },
                     { "data": "day" },
-                    { "data": "number" },
+                    { "data": "target" },
                     { "data": "interviewee" },
-                    { "data": "company" },
                     { "data": "pass" }
                 ],
                 select: true,
