--- a/views/company.ejs
+++ b/views/company.ejs
@@ -34,14 +34,14 @@
                     <!-- /.panel -->
                 </div>
             </div>
-            <!-- /.row -->
-            <div id="row2" class="row">
+
+            <!-- <div id="row2" class="row">
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             门禁权限设置
                         </div>
-                        <!-- /.panel-heading -->
+
                         <div class="panel-body">
                             <table id="table2" class="ui celled table" cellspacing="0" width="100%">
                                 <thead>
@@ -53,14 +53,14 @@
                                     </tr>
                                 </thead>
                             </table>
-                            <!-- /.table-responsive -->
+
 
                         </div>
-                        <!-- /.panel-body -->
+
                     </div>
-                    <!-- /.panel -->
+
                 </div>
-            </div>
+            </div> -->
         </div>
         <!-- /.container-fluid -->
     </div>
@@ -156,7 +156,7 @@
                     { extend: "edit", editor: editor },
                     { extend: "remove", editor: editor }
                 ],
-                "order": [[2, 'asc']],
+                "order": [[1, 'asc']],
                 "language": {
                     "url": "../vendor/zh_CN.txt"
                 }
