--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -24,13 +24,19 @@
         .header p {
             font-size: 14px;
         }
+        .title{
+            text-align: center;
+            font-size: 1.5rem;
+            margin-top: 1rem;
+            color: #999;
+        }
     </style>
 </head>
 
 <body>
     <div id="form">
         <div class="weui-btn-area"> <a id="register" href="http://www.wyhuijin.com/door/getcode.php?auk=demo1&scope=snsapi_userinfo" class="weui-btn weui-btn_primary">常驻用户注册</a> </div>
-        <div class="weui-btn-area"> <a id="visit" href="http://www.wyhuijin.com/door/getcode.php?auk=demo2&scope=snsapi_userinfo" class="weui-btn weui-btn_primary">来访申请</a> </div>
+        <div class="title"> 欢迎汇金大厦用户入驻登记</div>
     </div>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/1.1.0/weui.min.css">
