--- a/views/header.ejs
+++ b/views/header.ejs
@@ -51,6 +51,7 @@
     </style>
 </head>
 
+
 <body>
 
     <div id="wrapper">
@@ -96,7 +97,7 @@
                         <li>
                             <a href="/admin"><i class="fa fa-home fa-fw"></i> 首页</a>
                         </li>
-                        <li>
+                        <li id="index1">
                             <a href="#"><i class="fa fa-desktop fa-fw"></i> 门禁管理<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
