--- a/views/history.ejs
+++ b/views/history.ejs
@@ -78,6 +78,9 @@
     <script>
         var editor;
         $(document).ready(function () {
+            if(!<%=flag%>){
+                $('#index1').css('display','none'); 
+            }
             var table = $('#table').DataTable({
                 "processing": true,
                 stateSave: true,
