--- a/views/open.ejs
+++ b/views/open.ejs
@@ -11,8 +11,7 @@
   <title>微信二维码门禁</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
+      background: #fff url('../bg.jpg') no-repeat left top;
     }
   </style>
 </head>
@@ -29,6 +28,6 @@
   <script type="text/javascript">
     var socket = io.connect('http://1p729i9813.51mypc.cn:16628');
     socket.emit('clientBroadcast', { room: "eventRoom", event: "<%=ip%>", data: 1 });
-    weui.toast('<%=title%>', 3000);
+    weui.toast('<%=title%>', 5000);
   </script>
 </body>
