--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="en">
   <meta charset="UTF-8">
-  <title>成功</title>
+  <title>结果</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
@@ -10,27 +11,30 @@
   <meta http-equiv="Cache-Control" content="no-siteapp" />
 
   <style>
-    .header {
-      text-align: center;
+    body {
+      background: #fff url('../bg.jpg') no-repeat left top;
     }
-    .header h1 {
-      font-size: 200%;
-      color: #333;
-      margin-top: 30px;
-    }
-    .header p {
-      font-size: 14px;
+
+    h1 {
+      margin-left: 3rem;
+      margin-top: 15rem;
+      color: #dc930a;
     }
   </style>
 </head>
-<body>
-<div id="form">
-          <h1><%=title%></h1>
-</div>
-<link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/1.1.0/weui.min.css">
-<script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.1.1/weui.min.js"></script>
-<script type="text/javascript">
 
-</script>
+<body>
+
+  <div id="form">
+    <h1>
+      <%=title%>
+    </h1>
+  </div>
+  <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/1.1.0/weui.min.css">
+  <script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.1.1/weui.min.js"></script>
+  <script type="text/javascript">
+
+  </script>
 </body>
+
 </html>
