--- a/views/progress.ejs
+++ b/views/progress.ejs
@@ -3,7 +3,7 @@
 
 <head lang="en">
   <meta charset="UTF-8">
-  <title>结果</title>
+  <title>审核中</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
@@ -11,7 +11,8 @@
   <meta http-equiv="Cache-Control" content="no-siteapp" />
 
   <style>
-    
+
+
     h1 {
       margin-left: 3rem;
       margin-top: 15rem;
@@ -22,11 +23,9 @@
 
 <body>
 
-  <div id="form">
-    <div id="Layer1" style="position:absolute; left:0px; top:0px; width:100%; height:100%">  
-      <img src="../success.jpg" width="100%" height="100%"/>  
-      </div>  
-  </div>
+  <div id="Layer1" style="position:absolute; left:0px; top:0px; width:100%; height:100%">  
+    <img src="../audit.jpg" width="100%" height="100%"/>  
+    </div>  
   <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/1.1.0/weui.min.css">
   <script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.1.1/weui.min.js"></script>
   <script type="text/javascript">
