--- a/views/open.ejs
+++ b/views/open.ejs
@@ -10,16 +10,14 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
   <title>微信二维码门禁</title>
   <style>
-    body {
-      background: #fff url('../bg.jpg') no-repeat left top;
-    }
+    
   </style>
 </head>
 
 <body>
-  <h1>
-
-  </h1>
+  <div id="Layer1" style="position:absolute; left:0px; top:0px; width:100%; height:100%">  
+    <img src="../welcome.jpg" width="100%" height="100%"/>  
+    </div>  
 
   <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/1.1.0/weui.min.css">
@@ -28,6 +26,6 @@
   <script type="text/javascript">
     var socket = io.connect('http://1p729i9813.51mypc.cn:16628');
     socket.emit('clientBroadcast', { room: "eventRoom", event: "<%=ip%>", data: 1 });
-    weui.toast('<%=title%>', 5000);
+    weui.toast('<%=title%>', 3000);
   </script>
 </body>
