--- a/views/employee.ejs
+++ b/views/employee.ejs
@@ -1,4 +1,4 @@
-<% include header %>
+<% include header1 %>
     <div id="page-wrapper">
         <div class="container-fluid">
             <div class="row">
@@ -28,7 +28,7 @@
                             <div class="tab-content">
                                 <div class="tab-pane fade" id="home">
                                     <br>
-                                    <table id="table" class="ui celled table" cellspacing="0" width="100%">
+                                    <table id="table" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                         <thead>
                                             <tr>
                                                 <th>序号</th>
@@ -43,7 +43,7 @@
                                 </div>
                                 <div class="tab-pane fade in active" id="profile">
                                     <br>
-                                    <table id="table1" class="ui celled table" cellspacing="0" width="100%">
+                                    <table id="table1" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                         <thead>
                                             <tr>
                                                 <th>序号</th>
@@ -73,7 +73,7 @@
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <table id="table2" class="ui celled table" cellspacing="0" width="100%">
+                            <table id="table2" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                 <thead>
                                     <tr>
                                         <th>序号</th>
@@ -102,8 +102,6 @@
     <!-- jQuery -->
     <script src="../vendor/jquery/jquery.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript-->
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
     <script src="../vendor/metisMenu/metisMenu.min.js"></script>
@@ -111,15 +109,14 @@
     <!-- Custom Theme JavaScript -->
 
     <script src="../dist/js/sb-admin-2.js"></script>
-
-    <script src="../dist/js/semantic.min.js"></script>
+    <script src="../dist/js/bootstrap.min.js"></script>
     <script src="../dist/js/jquery.dataTables.min.js"></script>
-    <script src="../dist/js/dataTables.semanticui.min.js"></script>
+    <script src="../dist/js/dataTables.bootstrap.min.js"></script>
     <script src="../dist/js/dataTables.buttons.min.js"></script>
-    <script src="../dist/js/buttons.semanticui.min.js"></script>
+    <script src="../dist/js/buttons.bootstrap.min.js"></script>
     <script src="../dist/js/dataTables.select.min.js"></script>
     <script src="../dist/js/dataTables.editor.min.js"></script>
-    <script src="../dist/js/editor.semanticui.min.js"></script>
+    <script src="../dist/js/editor.bootstrap.min.js"></script>
     <script>
         var editor;
         $(document).ready(function () {
@@ -223,7 +220,7 @@
                 table: "#table2",
                 fields: [
                     { label: '用户', name: 'user', type: 'select' },
-                    { label: '门禁名称', name: 'doorid', type: 'select' }
+                    { label: '门禁名称', name: 'doorid', type: 'checkbox', className: 'list' }
                 ], i18n: {
                     create: {
                         button: "新增",
@@ -360,8 +357,8 @@
         });
     </script>
     <style>
-        .list .eight {
-            height: 350px;
+        .list {
+            height: 450px;
             overflow-y: scroll;
         }
     </style>
