清理权限定时器+访客页面问题
访客填写手机不更新用户手机，另加一个visitphone字段；

--- a/views/visitor.ejs
+++ b/views/visitor.ejs
@@ -91,11 +91,11 @@
                 "ajax": '../api/json/visitor',
                 "columns": [
                     { "data": null },
-                    { "data": "name" },
-                    { "data": "phone" },
-                    { "data": "content" },
+                    { "data": "name" , render: function (data) { return data ? data : "" } },
+                    { "data": "phone" , render: function (data) { return data ? data : "" } },
+                    { "data": "content", render: function (data) { return data ? data : "" }  },
                     { "data": "day" },
-                    { "data": "target" },
+                    { "data": "target" , render: function (data) { return data ? data : "" } },
                     { "data": "interviewee" },
                     { "data": "pass" },
                     { "data": "time" }
