--- a/views/visit.ejs
+++ b/views/visit.ejs
@@ -31,13 +31,13 @@
   <div id="form">
     <div class="weui-cells weui-cells_form">
       <div class="weui-cell">
-        <div class="weui-cell__hd"><label class="weui-label">手机号</label></div>
+        <div class="weui-cell__hd"><label class="weui-label">你的手机号</label></div>
         <div class="weui-cell__bd"> <input id="phone" class="weui-input" type="tel" required="" pattern="^\d{11}$" maxlength="11" placeholder="输入你的手机号"
             emptytips="请输入手机号" notmatchtips="请输入正确的手机号"> </div>
         <div class="weui-cell__ft"> <i class="weui-icon-warn"></i> </div>
       </div>
       <div class="weui-cell">
-        <div class="weui-cell__hd"><label class="weui-label">姓名</label></div>
+        <div class="weui-cell__hd"><label class="weui-label">你的姓名</label></div>
         <div class="weui-cell__bd"> <input id="name" class="weui-input" type="text" required="" maxlength="6" placeholder="输入你的姓名" emptytips="请输入你的姓名"
             notmatchtips="请输入你的姓名">
         </div>
