已审核人员列表+1000

--- a/views/employee.ejs
+++ b/views/employee.ejs
@@ -224,7 +224,7 @@
                 ], i18n: {
                     create: {
                         button: "新增",
-                        title: "新增一个门禁权限",
+                        title: "新增门禁权限",
                         submit: "创建"
                     },
                     edit: {
