--- a/views/success.ejs
+++ b/views/success.ejs
@@ -25,6 +25,7 @@
   <div id="form">
     <div id="Layer1" style="position:absolute; left:0px; top:0px; width:100%; height:100%">  
       <img src="../success.jpg" width="100%" height="100%"/>  
+      <div><%=id%></div>
       </div>  
   </div>
   <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/1.1.0/weui.min.css">
