--- a/views/menu2.ejs
+++ b/views/menu2.ejs
@@ -30,13 +30,16 @@
             margin-top: 1rem;
             color: #999;
         }
+        #visit{
+            background-color: #d9d9d9;
+        }
     </style>
 </head>
 
 <body>
     <div id="form">
         <div class="weui-btn-area"> <a id="register" href="http://www.wyhuijin.com/door/getcode.php?auk=ndregister&scope=snsapi_userinfo" class="weui-btn weui-btn_primary">业主注册</a> </div>
-        <div class="weui-btn-area"> <a id="visit" href="http://www.wyhuijin.com/door/getcode.php?auk=ndvisit&scope=snsapi_userinfo" class="weui-btn weui-btn_primary">来访申请</a> </div>
+        <div class="weui-btn-area"> <a id="visit" href="javascript:;" class="weui-btn weui-btn_primary">来访申请(即将开放)</a> </div>
     </div>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/1.1.0/weui.min.css">
