--- a/views/company.ejs
+++ b/views/company.ejs
@@ -22,9 +22,7 @@
                                         <th>序号</th>
                                         <th>公司名称</th>
                                         <th>楼层</th>
-                                        <th>门牌号</th>
-                                        <th>联系人</th>
-                                        <th>联系人电话</th>
+                                        
                                     </tr>
                                 </thead>
                             </table>
@@ -111,10 +109,8 @@
                 table: "#table",
                 fields: [
                     { label: '公司名称', name: 'name' },
-                    { label: '楼层', name: 'floor' },
-                    { label: '门牌号', name: 'number' },
-                    { label: '联系人', name: 'connecter' },
-                    { label: '联系人电话', name: 'phone' }
+                    { label: '楼层', name: 'floor' }
+                    
                 ], i18n: {
                     create: {
                         button: "新增",
@@ -145,10 +141,8 @@
                 "columns": [
                     { "data": null },
                     { "data": "name" },
-                    { "data": "floor" },
-                    { "data": "number" },
-                    { "data": "connecter" },
-                    { "data": "phone" }
+                    { "data": "floor" }
+                    
                 ],
                 select: true,
                 buttons: [
