--- a/views/open1.ejs
+++ b/views/open1.ejs
@@ -8,7 +8,7 @@
   <meta name="MobileOptimized" content="320">
   <meta name="format-detection" content="telephone=no">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-  <title>微信二维码门禁</title>
+  <title>微信二维码门禁1</title>
   <style>
     
   </style>
@@ -22,10 +22,8 @@
   <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/1.1.0/weui.min.css">
   <script type="text/javascript" src="../weui.js"></script>
-  <script src="../socket.io.min.js"></script>
+
   <script type="text/javascript">
-    var socket = io.connect('http://localhost:5000/');
-    socket.emit('clientBroadcast', { room: "eventRoom", event: "192.168.1.10", data: 1 });
-    weui.toast('', 3000);
+    weui.toast('新门测试', 3000);
   </script>
 </body>
