更改诺丁注册页面地址

--- a/views/grid.ejs
+++ b/views/grid.ejs
@@ -102,7 +102,7 @@
                         </div>
                         <p class="weui-grid__label">汇金大厦</p>
                     </a>
-                    <a href="../menu/2" class="weui-grid">
+                    <a href="http://www.wyhuijin.com/door/getcode.php?auk=door" class="weui-grid">
                         <div class="weui-grid__icon">
                             <img src="../resources/icon_tabbar.png" alt="">
                         </div>
